Tests/CompilerTests/negative/static-call.hylo
fun f0(x: Void) {}

fun f1<T>(x: T) { }

fun f2<T :: * -> *>() -> T {}

fun main() {
  f0<Void>(x: ())

  f1<Void>(x: ())
  f1<Void>(x: ((),))
  f1<Void, Void>(x: ())
}
